<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.personal.debrian.squareone.CreateAccountActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nameInput"
        android:gravity="center"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/new_nameInput"
        />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/passwordInput"
        android:gravity="center"
        android:id="@+id/new_passwordInput"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/new_emailInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/emailInput"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/new_emailInput"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/new_nameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpBtn"
        android:backgroundTint="@color/lunch_color"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/new_passwordInput"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
