<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.personal.debrian.squareone.Login">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/loginBtn"/>

    <TextView
        android:id="@+id/createAccountBtn"
        android:text="@string/create_button"
        android:textColor="#337df4"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/emailInput"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/nameInput"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/passwordInput"
        android:gravity="center"
        android:id="@+id/passwordInput"
        android:layout_below="@+id/nameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <Button
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:backgroundTint="@color/lunch_color"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/passwordInput"
        android:layout_centerHorizontal="true"
        tools:targetApi="lollipop" />
</RelativeLayout>
